Media queries para várias telas

--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <title>Login</title>
 
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
     <main>
-        <section id="Login">
-            <div id="imagen">
-
+        <section id="login">
+            <div id="imagem">
+                <!--imagem na css-->
             </div>
             <div id="formulario">
-                
+
                 <h1>Login</h1>
 
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer suas configuraçoes no  seu ambiente</p>
