--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
@@ -20,7 +22,28 @@
 
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer suas configuraçoes no  seu ambiente</p>
 
-                <form action="login.php" method="post">
+                <form action="login.php" method="post" autocomplete="on">
+
+                    <div class="campo">
+                        
+                        <span class="material-icons">person;</span>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="40">
+                        <label for="ilogin">Login</label>
+
+                    </div>
+
+                    <div class="campo">
+                        
+                        <span class="material-icons">vpn_key;</span>
+                        <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8">
+                        <label for="isenha">Senha</label>
+
+                    </div>
+
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html">Esqueci a senha
+
+                     </a> <i class="material-icons">mail </i>
 
                 </form>
             </div>
