--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                     <div class="campo">
                         
-                        <span class="material-icons">person;</span>
+                        <span class="material-icons">person</span>
                         <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="40">
                         <label for="ilogin">Login</label>
 
@@ -34,16 +34,16 @@
 
                     <div class="campo">
                         
-                        <span class="material-icons">vpn_key;</span>
+                        <span class="material-icons">vpn_key</span>
                         <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8">
                         <label for="isenha">Senha</label>
 
                     </div>
 
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">Esqueci a senha
+                    <a href="esqueci.html" class="botao">Esqueci a senha
 
-                     </a> <i class="material-icons">mail </i>
+                    <i class="material-icons">mail </i></a> 
 
                 </form>
             </div>
